--- a/SolutionName.Infrastructure/SolutionName.Infrastructure.csproj
+++ b/SolutionName.Infrastructure/SolutionName.Infrastructure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SolutionName.Application\SolutionName.Application.csproj" />
+  </ItemGroup>
+
 </Project>
